rewrite cleanup